# waveform-sdk

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  main.c
cmake/: LibWaveformConfig.cmake
cmake/Modules/: FindLibEvent.cmake  FindPthreadWorkQueue.cmake
cmake/toolchains/: aarch64-rasfire-linux.cmake
debian/: changelog  control  copyright  libwaveform-dev.docs  libwaveform-dev.examples  libwaveform-dev.install  libwaveform.install  rules
doc/: README.md
docs/: README.md
example/: CMakeLists.txt  README.md  main.c
extras/: Dockerfile  docker-compose.yml
include/: waveform.h  waveform_api.h
libpwq/: CMakeLists.txt
libpwq/src/: api.c
libpwq/src/linux/: thread_rt.c
libpwq/src/posix/: manager.c
scripts/: dpkg-deb-toolchain.py
src/: CMakeLists.txt  discovery.c  meters.c  meters.h  radio.c  radio.h  utils.c  utils.h  vita.c  vita.h  waveform.c  waveform.h
tests/: CMakeLists.txt  CMakeLists.txt.in  UtilTests.cpp  WaveformTests.cpp
